# curious-babybench

./: .gitignore  README.md  main.py  pyproject.toml  train_selftouch_policies.py
files/: agent.py  config.py  config_selftouch.yml  evaluate.py  readme.md  rnd.py  train.py  train.sh  world_model.py
