[project]
name = "curious-babybench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools==5.5.1",
    "cachetoolsutils==6.0",
    "gymnasium==0.28.1",
    "imageio==2.37.0",
    "matplotlib==3.9.4",
    "mujoco==3.3.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "opencv-python-headless==4.11.0.86",
    "pyyaml==6.0.2",
    "rtree==1.3.0",
    "scikit-image==0.24.0",
    "scipy==1.13.1",
    "stable-baselines3==2.3.2",
    "torch==2.6.0",
    "trimesh==4.6.2",
]
